allow create model and implement

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "modelmatch",
+  "name": "@volrathxiii/objectinterface",
   "version": "1.0.0",
-  "description": "Match model and data",
+  "description": "implements interface to js",
   "main": "src/index.js",
   "author": "Patrick Rivera",
   "license": "ISC",
